Updating case sensitive file naming

--- a/module-2/Reid_Mod2_2.html
+++ b/module-2/Reid_Mod2_2.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="HTML, CSS">
     <meta name="author" content="Jeffrey Reid">
 
-    <link rel="stylesheet" href="Reid_Mod2_2.css">
+    <link rel="stylesheet" href="reid_mod2_2.css">
 
     <title>
         CSD 340 Development with HTML and CSS
