--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <ul style="list-style-type: disc;">
         <li> <a href="module-1/reid_mod1_3"> Module 1.3 </a> </li>
         <li> <a href="module-2/Reid_Mod2_2"> Module 2.2 </a> </li>
-        <li> <a href="module-3/reid_mod3_3"> Module 3.3 </a> </li>
+        <li> <a href="module-3/Reid_Mod3_3"> Module 3.3 </a> </li>
     </ul>
 
     <h3> Projects </h3>
