--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li> <a href="module-1/reid_mod1_3"> Module 1.3 </a> </li>
         <li> <a href="module-2/Reid_Mod2_2"> Module 2.2 </a> </li>
         <li> <a href="module-3/Reid_Mod3_3"> Module 3.3 </a> </li>
+        <li> <a href="module-4/Reid_Mod4_2"> Module 4.2 </a> </li>
     </ul>
 
     <h3> Projects </h3>
