Update some missing Parenthesis in the author description

--- a/module-4/Reid_Mod4_2.html
+++ b/module-4/Reid_Mod4_2.html
@@ -25,7 +25,7 @@
                 <h3> This is the cover for the book Battle Royale by Takami Koushun </h3>
                 <figure>
                     <img src="csd-340/module-4/Images/BattleRoyalebyTakamiKoushun.jpg" alt="Battle Royale" width="200">
-                    <figcaption>Author: Takami Koushun</figcaption>
+                    <figcaption>(Author: Takami Koushun)</figcaption>
                 </figure>
             </div>
 
@@ -33,7 +33,7 @@
                 <h3> This is the cover for the book Num8ers by Rachel Ward </h3>
                 <figure>
                     <img src="csd-340/module-4/Images/Num8ersbyRachelWard.jpg" alt="Num8ers" width="200">
-                    <figcaption>Author: Rachel Ward</figcaption>
+                    <figcaption>(Author: Rachel Ward)</figcaption>
                 </figure>
             </div>
 
@@ -41,7 +41,7 @@
                 <h3> This is the cover for the book Epic by Connor Kostick </h3>
                 <figure>
                     <img src="csd-340/module-4/Images/EpicbyConnorKostick.jpg" alt="Epic" width="200">
-                    <figcaption>Author: Connor Kostick</figcaption>
+                    <figcaption>(Author: Connor Kostick)</figcaption>
                 </figure>
             </div>
         </div>
