--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
         <li> <a href="module-3/Reid_Mod3_3"> Module 3.3 </a> </li>
         <li> <a href="module-4/Reid_Mod4_2"> Module 4.2 </a> </li>
         <li> <a href="module-6/Reid_Mod6_2"> Module 6.2 </a> </li>
+        <li> <a href="module-8/Reid_Mod8_2"> Module 8.2 </a> </li>
     </ul>
 
     <h3> Projects </h3>
 
     <ul style="list-style-type: disc;">
-        <li> <a href="BioSiteProjectHomePage"> BioSite Project Home Page </a> </li>
+        <li> <a href="https://sirbossman0.github.io/bioSite/landing_page.html"> BioSite Project Home Page </a> </li>
         <li> <a href="FinalExam"> Final Exam </a> </li>
     </ul>
 
