--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <li> <a href="module-4/Reid_Mod4_2"> Module 4.2 </a> </li>
         <li> <a href="module-6/Reid_Mod6_2"> Module 6.2 </a> </li>
         <li> <a href="module-8/Reid_Mod8_2"> Module 8.2 </a> </li>
+        <li> <a href="module-9/Reid_Mod9_3"> Module 9.3 </a> </li>
     </ul>
 
     <h3> Projects </h3>
