--- a/module-9/Reid_Mod9_3.html
+++ b/module-9/Reid_Mod9_3.html
@@ -25,7 +25,7 @@
     
     <h1> Assignment 9.3: JavaScript - Part 1 </h1>
 
-    <h2> Chapter 1: My Hobby </h2>
+    <h2> Independence Day Iconic Speech </h2>
 
     <!--I would like to preface this by saying that I didn't initially realize your example had this 
     same speech. Tis a coincidence-->
