Uploading updated index

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <li> <a href="module-6/Reid_Mod6_2"> Module 6.2 </a> </li>
         <li> <a href="module-8/Reid_Mod8_2"> Module 8.2 </a> </li>
         <li> <a href="module-9/Reid_Mod9_3"> Module 9.3 </a> </li>
+        <li> <a href="module-10/Reid_Mod10_3"> Module 10.3 </a> </li>
     </ul>
 
     <h3> Projects </h3>
