Uploading Module 12 and updated index

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <li> <a href="module-9/Reid_Mod9_3"> Module 9.3 </a> </li>
         <li> <a href="module-10/Reid_Mod10_3"> Module 10.3 </a> </li>
         <li> <a href="module-11/Reid_Mod11_2"> Module 11.2 </a> </li>
+        <li> <a href="module-12/Reid_Mod12_2"> Module 12.2 </a> </li>
     </ul>
 
     <h3> Projects </h3>
